# Agentic-Healthcare-Text2SQL-Assistant

./: .gitignore  ARCHITECTURE.md  Assessment.md  Makefile  README.md  agent_orchestrator.py  chat.py  env.template  main.py  observability.py  orchestrator_config.py  peer_review.py  pyproject.toml  session_log.py  streamlit_app.py  user_query_examples.txt
data/: generate_data.py  simulate_data_plan.md
examples/: README.md  bundle_a_cohort_trend.md  bundle_c_cost_and_chart.md  cost_and_chart_sql_examples.md  demo_cohort_and_care_gap_workflow.md  diabetes_workflow_sql_examples.md  time_to_event_sql.md  time_to_metformin_sql_examples.md  workflow_flagship_diabetes_analytics.md
scripts/: load_archives_to_duckdb.py  smoke_session_export.py
tests/: test_approval_policy.py  test_followup_ranking.py  test_observability.py  test_orchestrator.py  test_orchestrator_config.py  test_peer_review.py  test_peer_review_verdict.py  test_permissions.py  test_query_cache.py  test_session_digest.py  test_session_log.py  test_session_state.py  test_sql_error_hints.py  test_sql_guard.py  test_tool_registry.py
tools/: approval_policy.py  chart_tool.py  context_manager.py  db_query.py  permissions.py  query_cache.py  session_state.py  sql_error_hints.py  sql_guard.py  tool_registry.py
