[project]
name = "asdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.1",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "openai>=2.6.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.1.1",
    "tqdm>=4.66.0",
    "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "iniconfig>=2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
